--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@blad3mak3r/lavaplayer-encoding",
+  "name": "lavaplayer-encoding",
   "version": "0.1.6",
-  "description": "Encode & decode lavaplayer tracks locally",
+  "description": "Encode and Decode lavaplayer tracks locally",
   "main": "dist/src/index.js",
   "typings": "typings/src/index.d.ts",
   "files": [
@@ -15,20 +15,6 @@
     "build": "tsc",
     "prepare": "pnpm run build"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Blad3Mak3r/lavaplayer-encoding.git"
-  },
-  "keywords": [
-    "lavaplayer",
-    "track"
-  ],
-  "author": "Blad3Mak3r",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/Blad3Mak3r/lavaplayer-encoding/issues"
-  },
-  "homepage": "https://github.com/Blad3Mak3r/lavaplayer-encoding#readme",
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-syntax-bigint": "^7.4.4",
